# skyline

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  MakefileNSO  README.md  build.rs  cross.json  cross.npdm  cross_og.npdm  exported.txt  link.ld  main.npdm  nso.mk  sendPatch.py  switch.specs
.github/workflows/: upload_release.yml
include/: Arc.hpp  ModuleObject.hpp  alloc.h  curl.h  cxa.h  endianess.h  macros.h  main.hpp  mem.h  operator.h  pfnc.h  search.h  std.h  str.h  types.h
include/nn/: account.h  audio.h  crypto.h  diag.h  friends.h  fs.h  hid.h  hid.hpp  image.h  mem.h  nifm.h  nn.h  nn.rs  oe.h  os.h  os.hpp  prepo.h  ro.h  settings.h  socket.h  svc.h  time.h  util.h  vi.h  wrapper.hpp
include/nn/atk/: SoundDataManager.h
include/nn/g3d/: BindFuncTable.h  ResLightAnim.h  ResMaterial.h  ResMaterialAnim.h
include/nn/gfx/: api.h
include/nn/nex/: auth.h  buffer.h  cache.h  client.h  data.h  ddl.h  dynamic.h  encryption.h  hash.h  instance.h  key.h  pseudo.h  reference.h  socket.h  string.h  system.h  time.h
include/nn/sf/: hipc.h
include/nvn/: pfnc.h  types.h
include/skyline/: utils.h
linkerscripts/: application.ld  syms600.ld
scripts/: calcJump.py  createNpdm.py  genPatch.py  patchNpdm.py  sendPatch.py
source/: crt0.s  crti.c  cxa.c  main.cpp  module.cpp  operator.cpp
source/nvn/: pfnc.cpp
source/skyline/: utils.c
src/: api.rs  init.rs  lib.rs  loggers.rs  pointer_iter.rs  tcp_init.rs
src/cpp/: README.md  switch.specs
src/loggers/: kernel_logger.rs  sd_logger.rs
src/nx/: mod.rs  svc.rs
(+226 files in other folders)
