[package]
name = "rust-skyline"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
bitflags = "1.2.1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.53.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
